@@ -59,6 +59,7 @@
             Add sanity check for names returned from Functions and fix Array.pop
             Stop characters getting dropped when pasting large amounts of data into Linux build
             nRF5x increase JsSysTime accuracy to 2^-20 from 2^-16 - drastically improves Util Timer accuracy
+            Added support for Software Serial ports (for low baud rates, eg. 9600)
 
      1v99 : Increase jslMatch error buffer size to handle "UNFINISHED TEMPLATE LITERAL" string (#1426)
             nRF5x: Make FlashWrite cope with flash writes > 4k
